--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Cadastrar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Cadastrar.cshtml
@@ -2,44 +2,29 @@
 
 @model CadastrarFabricanteViewModel;
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Cadastro de Fabricante - Gestão de Equipamentos</title>
-</head>
+﻿@{
+    Layout = "_Layout";
+    ViewBag.Titulo = "Edição de Fabricante";
+}
 
-<body>
-    <h1>Gestão de Equipamentos</h1>
+<form action="/fabricantes/cadastrar" method="post">
+    <label>Nome do Fabricante:</label>
+    <br />
+    <input type="text" name="nome" />
 
+    <br />
+
+    <label>Email do Fabricante:</label>
+    <br />
+    <input type="text" name="email" />
+
+    <br />
+
+    <label>Telefone do Fabricante:</label>
+    <br />
+    <input type="text" name="telefone" />
     <hr />
 
-    <a href="/">Página Inicial</a> /
-    <a href="/fabricantes/visualizar">Visualizar Fabricantes</a>
-
-    <hr />
-
-    <h3>Cadastro de Fabricante</h3>
-
-    <form action="/fabricantes/cadastrar" method="post">
-        <label>Nome do Fabricante:</label>
-        <br />
-        <input type="text" name="nome" />
-
-        <br />
-
-        <label>Email do Fabricante:</label>
-        <br />
-        <input type="text" name="email" />
-
-        <br />
-
-        <label>Telefone do Fabricante:</label>
-        <br />
-        <input type="text" name="telefone" />
-        <hr />
-
-        <button type="submit">Gravar</button>
-    </form>
-</body>
+    <button type="submit">Gravar</button>
+</form>
 </html>
