--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Excluir.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Excluir.cshtml
@@ -3,31 +3,22 @@
 
 @model ExcluirFabricanteViewModel;
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Exclusão de Fabricante - Gestão de Equipamentos</title>
-</head>
+﻿@{
+    Layout = "_Layout";
+    ViewBag.Titulo = "Exclusão de Fabricante";
+}
 
-<body>
-    <h1>Gestão de Equipamentos</h1>
+<button><a href="/fabricantes/cadastrar">Cadastrar Novo Fabricante</a></button>
+<button><a href="/fabricantes/visualizar">Visualizar Fabricantes</a></button>
 
-    <hr />
 
-    <a href="/">Página Inicial</a> /
-    <a href="/fabricantes/cadastrar">Cadastrar Novo Fabricante</a> /
-    <a href="/fabricantes/visualizar">Visualizar Fabricantes</a>
+<hr />
 
-    <hr />
+<h3>Exclusão de Fabricante</h3>
 
-    <h3>Exclusão de Fabricante</h3>
+<p>Você tem certeza que deseja excluir o registro "@Model.Nome"?</p>
 
-    <p>Você tem certeza que deseja excluir o registro "@Model.Nome"?</p>
-
-    <form action="/fabricantes/excluir/@Model.Id" method="post">
-        <button type="submit">Confirmar</button>
-        <a href="/fabricantes/visualizar">Voltar</a>
-    </form>
-</body>
-</html>
+<form action="/fabricantes/excluir/@Model.Id" method="post">
+    <button type="submit">Confirmar</button>
+    <button><a href="/fabricantes/visualizar">Voltar</a></button>
+</form>
