Implementado Layout Inicial ControladorEquipamentos

--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Editar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Editar.cshtml
@@ -2,57 +2,46 @@
 
 @model EditarEquipamentoViewModel;
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Edição de Equipamento - Gestão de Equipamentos</title>
-</head>
+﻿@{
+    Layout = "_Layout";
+    ViewBag.Titulo = "Edição de Equipamentos";
+}
 
-<body>
-    <h1>Gestão de Equipamentos</h1>
+<button><a href="/equipamentos/cadastrar">Cadastrar Novo Equipamento</a></button>
+<button><a href="/equipamentos/visualizar">Visualizar Equipamento</a></button>
+
+<hr>
+
+<form action="/equipamentos/editar/@Model.Id" method="post">
+
+    <label for="Nome">Nome do Equipamento:</label>
+    <br />
+    <input type="text" name="Nome" id="Nome" value="@Model.Nome" />
+
+    <br />
+
+    <label for="PrecoAquisicao">Preço de Aquisição do Equipamento:</label>
+    <br />
+    <input type="text" name="PrecoAquisicao" id="PrecoAquisicao" value="@Model.PrecoAquisicao" />
+
+    <br />
+
+    <label for="DataFabricacao">Data de Fabricação do Equipamento:</label>
+    <br />
+    <input type="date" name="DataFabricacao" id="DataFabricacao" value="@Model.DataFabricacao.ToString("yyyy-MM-dd")" />
+
+    <br />
+
+    <label for="FabricanteId">Fabricante do Equipamento:</label>
+    <br />
+    <select name="FabricanteId" id="FabricanteId">
+        @foreach (var fabricante in Model.FabricantesDisponiveis)
+        {
+            <option value="@fabricante.Id" @(fabricante.Id == Model.FabricanteId ? "selected" : "")>@fabricante.Nome</option>
+        }
+    </select>
 
     <hr />
 
-    <a href="/">Página Inicial</a> /
-    <a href="/equipamentos/visualizar">Visualizar Equipamentos</a>
-
-    <hr />
-
-    <h3>Edição de Equipamento</h3>
-
-    <form action="/equipamentos/editar/@Model.Id" method="post">
-
-        <label for="Nome">Nome do Equipamento:</label>
-        <br />
-        <input type="text" name="Nome" id="Nome" value="@Model.Nome"/>
-
-        <br />
-
-        <label for="PrecoAquisicao">Preço de Aquisição do Equipamento:</label>
-        <br />
-        <input type="text" name="PrecoAquisicao" id="PrecoAquisicao" value="@Model.PrecoAquisicao" />
-
-        <br />
-
-        <label for="DataFabricacao">Data de Fabricação do Equipamento:</label>
-        <br />
-        <input type="date" name="DataFabricacao" id="DataFabricacao" value="@Model.DataFabricacao.ToString("yyyy-MM-dd")" />
-
-        <br />
-
-        <label for="FabricanteId">Fabricante do Equipamento:</label>
-        <br />
-        <select name="FabricanteId" id="FabricanteId">
-            @foreach (var fabricante in Model.FabricantesDisponiveis)
-            {
-                <option value="@fabricante.Id" @(fabricante.Id == Model.FabricanteId ? "selected" : "")>@fabricante.Nome</option>
-            }
-        </select>
-
-        <hr />
-
-        <button type="submit">Gravar</button>
-    </form>
-</body>
-</html>
+    <button type="submit">Gravar</button>
+</form>
