--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
@@ -8,6 +8,8 @@
     ViewBag.Titulo = "Visualização de Fabricantes";
 }
 
+<button><a href="/fabricantes/cadastrar">Cadastrar Novo Fabricante</a></button>
+
 @foreach (DetalhesFabricanteViewModel f in Model.Registros)
 {
     <div>
