--- a/GestaoDeEquipamentos.ConsoleApp/Views/Shared/_Layout.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         <ul>
             <li><a href="/">Página Inicial</a></li>
             <li><a href="/equipamentos/visualizar">Equipamentos</a></li>
-            <li><a href="/fornecedores/visualizar">Fornecedores</a></li>
+            <li><a href="/fabricantes/visualizar">Fabricantes</a></li>
             <li><a href="/chamados/visualizar">Chamados</a></li>
         </ul>
     </nav>
