--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
@@ -19,8 +19,8 @@
         <p><strong>Telefone:</strong> @f.Telefone</p>
 
         <div>
-            <a type="button" href="/fabricantes/editar/@f.Id">Editar</a>
-            <a type="button" href="/fabricantes/excluir/@f.Id">Excluir</a>
+            <button><a type="button" href="/fabricantes/editar/@f.Id">Editar</a></button>
+            <button><a type="button" href="/fabricantes/excluir/@f.Id">Excluir</a></button>   
         </div>
     </div>
 }
