--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Cadastrar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Cadastrar.cshtml
@@ -1,51 +1,40 @@
 ﻿@using GestaoDeEquipamentos.ConsoleApp.Models
 @model CadastrarChamadoViewModel;
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Cadastro de Chamado - Gestão de Equipamentos</title>
-</head>
+﻿@{
+    Layout = "_Layout";
+    ViewBag.Titulo = "Cadastar Chamado";
+}
 
-<body>
-    <h1>Gestão de Equipamentos</h1>
+<button><a href="/chamados/cadastrar">Cadastrar Novo Chamado</a></button>
+<button><a href="/chamados/visualizar">Visualizar Chamados</a></button>
+
+<hr>
+
+<form action="/chamados/cadastrar" method="post">
+
+    <label for="Titulo">Título do Chamado:</label>
+    <br />
+    <input type="text" name="Titulo" id="Titulo" />
+
+    <br />
+
+    <label for="Descricao">Descrição do Chamado:</label>
+    <br />
+    <textarea name="Descricao" id="Descricao"></textarea>
+
+    <br />
+
+    <label for="EquipamentoId">Equipamento do Chamado:</label>
+    <br />
+    <select name="EquipamentoId" id="EquipamentoId">
+        @foreach (var equipamento in Model.EquipamentosDisponiveis)
+        {
+            <option value="@equipamento.Id">@equipamento.Nome</option>
+        }
+    </select>
 
     <hr />
 
-    <a href="/">Página Inicial</a> /
-    <a href="/chamados/visualizar">Visualizar Chamados</a>
-
-    <hr />
-
-    <h3>Cadastro de Chamado</h3>
-
-    <form action="/chamados/cadastrar" method="post">
-
-        <label for="Titulo">Título do Chamado:</label>
-        <br />
-        <input type="text" name="Titulo" id="Titulo" />
-
-        <br />
-
-        <label for="Descricao">Descrição do Chamado:</label>
-        <br />
-        <textarea name="Descricao" id="Descricao"></textarea>
-
-        <br />
-
-        <label for="EquipamentoId">Equipamento do Chamado:</label>
-        <br />
-        <select name="EquipamentoId" id="EquipamentoId">
-            @foreach (var equipamento in Model.EquipamentosDisponiveis)
-            {
-                <option value="@equipamento.Id">@equipamento.Nome</option>
-            }
-        </select>
-
-        <hr />
-
-        <button type="submit">Gravar</button>
-    </form>
-</body>
-</html>
+    <button type="submit">Gravar</button>
+</form>
