--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Excluir.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Excluir.cshtml
@@ -1,31 +1,20 @@
 ﻿@using GestaoDeEquipamentos.ConsoleApp.Models
 @model ExcluirChamadoViewModel;
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Exclusão de Chamado - Gestão de Equipamentos</title>
-</head>
+﻿@{
+    Layout = "_Layout";
+    ViewBag.Titulo = "Finalizar Chamados Concluídos";
+}
 
-<body>
-    <h1>Gestão de Equipamentos</h1>
+<button><a href="/chamados/cadastrar">Cadastrar Novo Chamado</a></button>
+<button><a href="/chamados/visualizar">Visualizar Chamados</a></button>
 
-    <hr />
+<hr>
 
-    <a href="/">Página Inicial</a> /
-    <a href="/chamados/cadastrar">Cadastrar Novo Chamado</a> /
-    <a href="/chamados/visualizar">Visualizar Chamados</a>
+<p>Você confirma que o chamado "@Model.Titulo" foi conluído e pode ser Finalizado/Excluido?</p>
 
-    <hr />
-
-    <h3>Exclusão de Chamado</h3>
-
-    <p>Você tem certeza que deseja excluir o registro "@Model.Titulo"?</p>
-
-    <form action="/chamados/excluir/@Model.Id" method="post">
-        <button type="submit">Confirmar</button>
-        <a href="/chamados/visualizar">Voltar</a>
-    </form>
-</body>
-</html>
+<form action="/chamados/excluir/@Model.Id" method="post">
+    <button type="submit">Confirmar</button>
+    <button> <a href="/chamados/visualizar">Voltar</a></button>
+   
+</form>
