--- a/GestaoDeEquipamentos.ConsoleApp/Views/Shared/_Layout.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/Shared/_Layout.cshtml
@@ -5,24 +5,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="~/app.css" />
-
     <title>@ViewBag.Titulo - Gestão de Equipamentos</title>
 </head>
 
 <style>
-    #cabecalho{
+    body{
+        background-color: #F5F5F5;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    #cabecalho {
         height: 60px;
         align-content: center;
         text-align: center;
         background-color: #23231A;
-        color: #F77F00;
+        color: #F5F5F5;
         padding: 10px;
         margin-left: 0px;
-        border-radius: 5px;
     }
 </style>
-
 
 <body>
     <div id="cabecalho">
