--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Visualizar.cshtml
@@ -15,7 +15,11 @@
     @foreach (var e in Model.Registros)
     {
         <li>
-            @e.ToString()<button><a href="/equipamentos/editar/@e.Id">Editar</a> </button> <button><a href="/equipamentos/excluir/@e.Id">Excluir</a></button>
+            <p>@e.ToString()</p>
+            <div>
+                <button><a href="/equipamentos/editar/@e.Id">Editar</a> </button>
+                <button><a href="/equipamentos/excluir/@e.Id">Excluir</a></button>
+            </div>        
         </li>
     }
 </ul>
