--- a/GestaoDeEquipamentos.ConsoleApp/Views/Shared/_Layout.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/Shared/_Layout.cshtml
@@ -8,23 +8,6 @@
     <title>@ViewBag.Titulo - Gestão de Equipamentos</title>
 </head>
 
-<style>
-    body{
-        background-color: #F5F5F5;
-        margin: 0px;
-        padding: 0px;
-    }
-
-    #cabecalho {
-        height: 60px;
-        align-content: center;
-        text-align: center;
-        background-color: #23231A;
-        color: #F5F5F5;
-        padding: 10px;
-        margin-left: 0px;
-    }
-</style>
 
 <body>
     <div id="cabecalho">
@@ -32,8 +15,8 @@
     </div>
 
     <nav>
-        <ul>
-            <li><a href="/">Página Inicial</a></li>
+        <ul id="link-menu-principal">
+            <li><a href="/">Inicio</a></li>
             <li><a href="/equipamentos/visualizar">Equipamentos</a></li>
             <li><a href="/fabricantes/visualizar">Fabricantes</a></li>
             <li><a href="/chamados/visualizar">Chamados</a></li>
