Implementações iniciais css Pagina inicial

--- a/GestaoDeEquipamentos.ConsoleApp/Views/Shared/PaginaInicial.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/Shared/PaginaInicial.cshtml
@@ -4,8 +4,8 @@ ViewBag.Titulo = "";
 }
 
 
-<button><a href="/fabricantes/visualizar"><h3>Fabricantes</h3></a></button>
-<button><a href="/equipamentos/visualizar"><h3>Equipamentos</h3></a></button>
-<button><a href="/chamados/visualizar"><h3>Chamados</h3></a></button>
+<button class="button-style"><a href="/fabricantes/visualizar"><h3>Fabricantes</h3></a></button>
+<button class="button-style"><a href="/equipamentos/visualizar"><h3>Equipamentos</h3></a></button>
+<button class="button-style"><a href="/chamados/visualizar"><h3>Chamados</h3></a></button>
 
    
