--- a/GestaoDeEquipamentos.ConsoleApp/Views/Shared/PaginaInicial.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/Shared/PaginaInicial.cshtml
@@ -3,31 +3,20 @@ Layout = "_Layout";
 ViewBag.Titulo = "";
 }
 
+<a class="botoes" href="/fabricantes/visualizar">
+    <h4>Fabricantes</h4><p>Gerencie os fabricantes aqui</p>
+ </a>
 
-<style>
-    .style {
-        border: 2px solid var(--cor-secundaria);
-        width: 250px;
-        height: 110px;
-        font-size: 1.2em;
-        text-decoration: none;
-        text-align: center;
-        border-radius: 5px;
-        color: var(--cor-fonte);
-    }
-    h4{
-        margin: 5px;
-    }
-    a:hover{
-        color: var(--cor-neutra);
-        background-color: var(--cor-secundaria);
-        transition: 0.4s;
-        border: 2px solid
-    }
-</style>
+<a class="botoes" href="/equipamentos/visualizar">
+    <h4>Equipamentos</h4><p>Gerencie os equipamentos aqui</p>
+</a>
 
-<a class="style" href="/fabricantes/visualizar"><h4>Fabricantes</h4><p>Gerencie os fabricantes aqui</p></a>
-<a class="style" href="/equipamentos/visualizar"><h4>Equipamentos</h4><p>Gerencie os equipamentos aqui</p></a>
-<a class="style" href="/chamados/visualizar"><h4>Chamados</h4><p>Gerencie os chamados de manutenção.</p></a>
+<a class="botoes" href="/chamados/visualizar">
+    <h4>Chamados</h4><p>Gerencie os chamados de manutenção aqui.</p>
+</a>
+
+
+
+
 
    
