--- a/GestaoDeEquipamentos.ConsoleApp/wwwroot/style.css
+++ b/GestaoDeEquipamentos.ConsoleApp/wwwroot/style.css
@@ -7,29 +7,38 @@
 body {
     font-family: 'Lucida Sans Unicode', sans-serif;
     background-color: var(--cor-neutra);
-    margin: 0px;
-    padding: 0px;
 }
+
+div{
+    text-align: center;
+}
+
 h2 {
     color: var(--cor-neutra);
-    margin-left: 10px;
 }
 
-a{
-    text-decoration: none;
+ul{
+    list-style: none;
 }
 
-h4 > a {
+hr{
+    margin-bottom: 20px; 
+}
+
+a {
     text-decoration: none;
     border: 2px solid var(--cor-secundaria);
     margin-top: 5px;
     color: var(--cor-fonte);
     padding: 5px;
+    text-decoration: none;
     border-radius: 5px;
 }
-
-h4 > a:hover{
+a:hover {
     color: var(--cor-neutra);
+    background-color: var(--cor-secundaria);
+    transition: 0.4s;
+    border: 2px solid var(--cor-neutra);
     background-color: var(--cor-secundaria);
     border-radius: 5px;
     transition: 0.4s;
@@ -43,38 +52,51 @@ li > a {
     font-weight: 600;
 }
 
-hr{
-    border: 1px solid var(--cor-secundaria);
-}
-
 main {
-    display: flex;
-    align-items: center;
+    display: inline-flex;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 10px;
+    text-align: center;
 }
 
 #cabecalho {
-    width: 100%;
-    display: flex;
+    display: inlie-flex;
+    text-align: center;
     background-color: var(--cor-secundaria);
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding: 10px 10px;
     font-size: 1.2em;
 }
 
-#button-inicial{
-    display: inline-flex;
-    flex-wrap: wrap;
-    margin: 5px;
+.botoes {
+    display:inline-flex;
+    text-align:center;
+    width: 250px;
+    height: 110px;
+    text-align: center;
 }
 
-#link-inicio{
-    margin: 20px;
-    text-decoration: none;
-    border: 1px solid var(--cor-secundaria);
+.botao-cadastrar{
+    margin: 10px;
 }
+
+.button-inicial {
+    display: inline-flex;
+    width: 110px;
+    flex-wrap: wrap;
+    margin: 10px auto;
+}
+
+.card-visualizar {
+    display: inline-flex;
+    max-width: 400px;
+    min-width: 348px;
+    border: 2px solid var(--cor-secundaria);
+    color: var(--cor-fonte);
+    text-align: center;
+    padding: 15px;
+    border-radius: 5px;
+}
+
 
 
 
