--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
@@ -8,19 +8,24 @@
     ViewBag.Titulo = "Visualização de Fabricantes";
 }
 
-<button><a href="/fabricantes/cadastrar">Cadastrar Novo Fabricante</a></button>
+<div class="botao-cadastrar">
+    <a href="/fabricantes/cadastrar">Cadastrar Novo Fabricante</a>
+</div>
+
 
 @foreach (DetalhesFabricanteViewModel f in Model.Registros)
 {
-    <div>
-        <h3>@f.Nome</h3>
-
-        <p><strong>Email:</strong> @f.Email</p>
-        <p><strong>Telefone:</strong> @f.Telefone</p>
-
-        <div>
-            <button><a type="button" href="/fabricantes/editar/@f.Id">Editar</a></button>
-            <button><a type="button" href="/fabricantes/excluir/@f.Id">Excluir</a></button>   
-        </div>
-    </div>
+    <ul class="card-visualizar">
+        <li>
+            <div>
+                <p><strong>Fabricante: </strong>@f.Nome</p>
+                <p><strong>Email:</strong> @f.Email</p>
+                <p><strong>Telefone:</strong> @f.Telefone</p>
+            </div>
+            <div>
+                <a href="/fabricantes/editar/@f.Id">Editar</a>
+                <a href="/fabricantes/excluir/@f.Id">Excluir</a>
+            </div>
+        </li>
+    </ul>
 }
