--- a/GestaoDeEquipamentos.ConsoleApp/Views/Shared/PaginaInicial.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/Shared/PaginaInicial.cshtml
@@ -1,7 +1,13 @@
-﻿﻿@{
+﻿@using System.Linq;
+@using GestaoDeEquipamentos.ConsoleApp.Models
+
+﻿@{
 Layout = "_Layout";
 ViewBag.Titulo = "";
+
+    List<DetalhesEquipamentoViewModel> equipamentos = ViewBag.Equipamentos as List<DetalhesEquipamentoViewModel>;
 }
+
 
 <a class="botoes" href="/fabricantes/visualizar">
     <h4>Fabricantes</h4><p>Gerencie os fabricantes aqui</p>
@@ -15,8 +21,32 @@ ViewBag.Titulo = "";
     <h4>Chamados</h4><p>Gerencie os chamados de manutenção aqui.</p>
 </a>
 
-
-
-
-
-   
+@if (equipamentos != null && equipamentos.Any())
+{
+    <h3>Equipamentos Cadastrados</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Fabricante</th>
+                <th>Preço de Aquisição</th>
+                <th>Data de Fabricação</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var equipamento in equipamentos)
+            {
+                <tr>
+                    <td>@equipamento.Nome</td>
+                    <td>@equipamento.NomeFabricante</td>
+                    <td>@equipamento.PrecoAquisicao.ToString("C2")</td>
+                    <td>@equipamento.DataFabricacao.ToString("dd/MM/yyyy")</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <p>Nenhum equipamento cadastrado.</p>
+}
