--- a/GestaoDeEquipamentos.ConsoleApp/Views/Shared/_Layout.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -26,7 +25,10 @@
     <hr>
 
     <main>
-        @RenderBody()
+        <div>
+            @RenderBody()
+        </div>
     </main>
+
 </body>
 </html>
