--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Visualizar.cshtml
@@ -11,25 +11,23 @@
     <a href="/equipamentos/cadastrar">Cadastrar Novo Equipamento</a>
 </div>
 
-
-        @foreach (var e in Model.Registros)
-        {
-          <ul class="card-visualizar">
+<div>
+    @foreach (var e in Model.Registros)
+    {
+        <ul class="card-visualizar">
             <li>
                 <div>
                     <p><strong>Nome: </strong>@e.Nome</p>
                     <p><strong>Fabricante: </strong>@e.NomeFabricante</p>
                     <p><strong>Data fabricação: </strong>@e.DataFabricacao</p>
-                    <p><strong>Preço de Aquisição: </strong>@e.PrecoAquisicao</p>
+                    <p><strong>Preço de Aquisição: </strong>@e.PrecoAquisicao.ToString("C2")</p>
                 </div>
 
                 <div>
                     <a href="/equipamentos/editar/@e.Id">Editar</a>
-                    <a href="/equipamentos/excluir/@e.Id">Excluir</a>
+                    <span><a href="/equipamentos/excluir/@e.Id">Excluir</a></span>
                 </div>
             </li>
-          </ul>
-
-        }
-
-
+        </ul>
+    }
+</div>
