--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
@@ -13,19 +13,21 @@
 </div>
 
 
-@foreach (DetalhesFabricanteViewModel f in Model.Registros)
-{
-    <ul class="card-visualizar">
-        <li>
-            <div>
-                <p><strong>Fabricante: </strong>@f.Nome</p>
-                <p><strong>Email:</strong> @f.Email</p>
-                <p><strong>Telefone:</strong> @f.Telefone</p>
-            </div>
-            <div>
-                <a href="/fabricantes/editar/@f.Id">Editar</a>
-                <a href="/fabricantes/excluir/@f.Id">Excluir</a>
-            </div>
-        </li>
-    </ul>
-}
+<div>
+    @foreach (DetalhesFabricanteViewModel f in Model.Registros)
+    {
+        <ul class="card-visualizar">
+            <li>
+                <div>
+                    <p><strong>Fabricante: </strong>@f.Nome</p>
+                    <p>Contato</p>
+                    <p>Email: @f.Email</p>
+                    <p>Telefone: @f.Telefone</p>
+
+                    <a href="/fabricantes/editar/@f.Id">Editar</a>
+                    <span><a href="/fabricantes/excluir/@f.Id">Excluir</a></span>
+                </div>
+            </li>
+        </ul>
+    }
+</div>
