--- a/GestaoDeEquipamentos.ConsoleApp/wwwroot/style.css
+++ b/GestaoDeEquipamentos.ConsoleApp/wwwroot/style.css
@@ -1,12 +1,14 @@
 ﻿:root {
     --cor-neutra: #F5F5F5;
-    --cor-secundaria: #709176;
-    --cor-fonte: #23231A;
+    --cor-secundaria: #82827D;
+    --cor-principal: #23231A;
 }
 
 body {
     font-family: 'Lucida Sans Unicode', sans-serif;
     background-color: var(--cor-neutra);
+    text-align: center;
+    margin-top: 20px;
 }
 
 div{
@@ -27,28 +29,30 @@ hr{
 
 a {
     text-decoration: none;
-    border: 2px solid var(--cor-secundaria);
+    border: 2px solid var(--cor-principal);
     margin-top: 5px;
-    color: var(--cor-fonte);
+    color: var(--cor-principal);
     padding: 5px;
     text-decoration: none;
     border-radius: 5px;
 }
 a:hover {
     color: var(--cor-neutra);
-    background-color: var(--cor-secundaria);
+    background-color: var(--cor-principal);
     transition: 0.4s;
-    border: 2px solid var(--cor-neutra);
-    background-color: var(--cor-secundaria);
+    border: 2px solid var(--cor-principal);
     border-radius: 5px;
     transition: 0.4s;
+}
+
+span > a:hover {
+    background-color: #9D0D00;
 }
 
 li > a {
     display: inline-flex;
     text-decoration: none;
-    color: var(--cor-fonte);
-    font-weight: 550;
+    color: var(--cor-principal);
     font-weight: 600;
 }
 
@@ -62,21 +66,21 @@ main {
 #cabecalho {
     display: inlie-flex;
     text-align: center;
-    background-color: var(--cor-secundaria);
+    background-color: var(--cor-principal);
     padding: 10px 10px;
     font-size: 1.2em;
+    border-radius: 5px;
 }
 
 .botoes {
     display:inline-flex;
-    text-align:center;
     width: 250px;
     height: 110px;
-    text-align: center;
+    padding: 10px;
 }
 
 .botao-cadastrar{
-    margin: 10px;
+    display: block;
 }
 
 .button-inicial {
@@ -89,10 +93,9 @@ main {
 .card-visualizar {
     display: inline-flex;
     max-width: 400px;
-    min-width: 348px;
-    border: 2px solid var(--cor-secundaria);
-    color: var(--cor-fonte);
     text-align: center;
+    border: 2px solid var(--cor-principal);
+    color: var(--cor-principal);
     padding: 15px;
     border-radius: 5px;
 }
