--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Visualizar.cshtml
@@ -19,7 +19,7 @@
                 <div>
                     <p><strong>Nome: </strong>@e.Nome</p>
                     <p><strong>Fabricante: </strong>@e.NomeFabricante</p>
-                    <p><strong>Data fabricação: </strong>@e.DataFabricacao</p>
+                    <p><strong>Data fabricação: </strong>@e.DataFabricacao.ToString("d")</p>
                     <p><strong>Preço de Aquisição: </strong>@e.PrecoAquisicao.ToString("C2")</p>
                 </div>
 
@@ -31,3 +31,4 @@
         </ul>
     }
 </div>
+<hr>
