--- a/GestaoDeEquipamentos.ConsoleApp/wwwroot/style.css
+++ b/GestaoDeEquipamentos.ConsoleApp/wwwroot/style.css
@@ -1,6 +1,6 @@
 ﻿:root {
     --cor-neutra: #F5F5F5;
-    --cor-secundaria: #82827D;
+    --cor-secundaria: forestgreen;
     --cor-principal: #23231A;
 }
 
@@ -8,23 +8,24 @@ body {
     font-family: 'Lucida Sans Unicode', sans-serif;
     background-color: var(--cor-neutra);
     text-align: center;
-    margin-top: 20px;
+    margin-top: 5px;
 }
 
-div{
+div {
     text-align: center;
 }
 
 h2 {
-    color: var(--cor-neutra);
+    color: var(--cor-secundaria);
 }
 
-ul{
+ul {
     list-style: none;
 }
 
-hr{
-    margin-bottom: 20px; 
+hr {
+    margin: 10px;
+    border: 1px solid var(--cor-principal);
 }
 
 a {
@@ -36,14 +37,16 @@ a {
     text-decoration: none;
     border-radius: 5px;
 }
-a:hover {
-    color: var(--cor-neutra);
-    background-color: var(--cor-principal);
-    transition: 0.4s;
-    border: 2px solid var(--cor-principal);
-    border-radius: 5px;
-    transition: 0.4s;
-}
+
+    a:hover {
+        color: var(--cor-secundaria);
+        background-color: var(--cor-principal);
+        transition: 0.45s;
+        border: 2px solid var(--cor-principal);
+        border-radius: 5px;
+        transition: 0.4s;
+        font-weight: bolder;
+    }
 
 span > a:hover {
     background-color: #9D0D00;
@@ -63,32 +66,89 @@ main {
     text-align: center;
 }
 
+input {
+    width: 200px;
+    margin-bottom: 10px;
+    border: 2px solid var(--cor-principal);
+    border-radius: 5px;
+}
+
+select {
+    margin-bottom: 10px;
+    text-align: center;
+    border: 2px solid var(--cor-principal);
+    border-radius: 5px;
+    padding: 5px;
+}
+
 #cabecalho {
     display: inlie-flex;
     text-align: center;
     background-color: var(--cor-principal);
     padding: 10px 10px;
-    font-size: 1.2em;
     border-radius: 5px;
 }
 
+.tabela-equipamentos {
+    border-collapse: collapse;
+    width: 100%;
+    font-size: 12px;
+}
+
+    .tabela-equipamentos th, .tabela-equipamentos td {
+        border-bottom: 2px solid var(--cor-principal);
+        padding: 8px;
+    }
+
+    .tabela-equipamentos tr:last-child td {
+        border-bottom: none;
+    }
+
+    .tabela{
+        border: 2px solid var(--cor-principal);
+        border-radius: 5px;
+        margin-top: 20px
+    }
+
+.forms {
+    border: 2px solid var(--cor-principal);
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.visualizar {
+    display: block;
+    margin-bottom: 20px;
+}
+
 .botoes {
-    display:inline-flex;
+    display: inline-flex;
     width: 250px;
     height: 110px;
     padding: 10px;
 }
 
-.botao-cadastrar{
-    display: block;
-}
-
 .button-inicial {
     display: inline-flex;
-    width: 110px;
+    font-size: 14px;
     flex-wrap: wrap;
-    margin: 10px auto;
+    margin-top: 10px;
 }
+
+.botao-submit{
+    width: 100px;
+    padding: 5px;
+    font-size: 1em;
+    border-radius: 5px;
+}
+
+    .botao-submit:hover {
+        background-color: var(--cor-principal);
+        color: forestgreen;
+        font-weight: bolder;
+        transition: 0.45s;
+    }
 
 .card-visualizar {
     display: inline-flex;
@@ -99,7 +159,3 @@ main {
     padding: 15px;
     border-radius: 5px;
 }
-
-
-
-
